package semantikCheck.expr;

public class Binary {
}
