package semantikCheck.interfaces;

public interface IStmt {
}
