package semantikCheck.stmt;

public class Block {
}
