package semantikCheck.stmt;

public class While {
}
